--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  <div class="container main">
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
+  </div>
   </body>
 </html>
