--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,11 +1,39 @@
+<% counter = 1 %>
 <h1>Create a game</h1>
 
-<table>
-  <thead>
-    <% for i in 0..5 %>
-      <tr><th class="category" data-col="<%= i %>">
-
-      </th></tr>
-    <% end %>
-  </thead>
-</table>
+<%= form_for(@game) do |game| %>
+  <%= game.fields_for :boards do |board| %>
+    <div category="board">
+      <%= game.fields_for :columns do |column| %>
+        <%= game.column.fields_for :category do |category| %>
+        <table><thead><tr><th>
+          <div class="form-group">
+            <%= category.label "Category" %>
+            <%= category.text_field :name, class: 'form-control' %>
+          </div>
+        </th></tr></thead>
+        <% end %>
+        <tbody>
+          <% counter = 1 %>
+          <%= game.column.fields_for :clues do |clue| %>
+          <tr><td>
+            <div class="form-group">
+              <%= f.hidden_field :position, :value => counter %>
+              <%= clue.label :clue %>
+              <%= clue.text_area :clue, class: 'form-control'%>
+            </div>
+            <div class="form-group">
+              <%= clue.label :response %>
+              <%= clue.text_field :response, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= clue.label :position %>
+              <%= clue.text_field :position, class: 'form-control' %>
+            </div>
+          </td></tr>
+          <% counter += 1 %>
+          <% end %>
+      <% end %>
+    </div>
+  <% end %>
+<% end %>
