Add basic game creation & view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,13 @@
   margin-top: 20px;
 }
 
+.column {
+  display: inline;
+}
 .main {
-  width: 700px;
+  width: 100%;
+}
+
+.category-header {
+  width: 200px;
 }
