--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,12 +1,26 @@
-<% counter = 1 %>
 <h1>Create a game</h1>
 
 <%= form_for(@game) do |game| %>
+  <%= render 'shared/error_messages' %>
+  <div class="form-group">
+    <%= game.label :title %>
+    <%= game.text_field :title, class: 'form-control' %>
+    <%= game.label :season %>
+    <%= game.number_field :season, class: 'form-control'%>
+    <%= game.label :episode %>
+    <%= game.number_field :episode, class: 'form-control'%>
+    <%= game.label :air_date %>
+    <%= game.date_field :air_date, class: 'form-control' %>
+  </div>
+  <% board_counter = 1 %>
   <%= game.fields_for :boards do |board| %>
-    <div category="board">
-      <%= game.fields_for :columns do |column| %>
-        <%= game.column.fields_for :category do |category| %>
-        <table><thead><tr><th>
+    <div class="board well">
+      <%= board.hidden_field :round, :value => board_counter %>
+      <% column_counter = 1 %>
+      <%= board.fields_for :columns do |column| %>
+        <%= column.hidden_field :position, :value => column_counter %>
+        <%= column.fields_for :category do |category| %>
+        <table class="column"><thead><tr><th>
           <div class="form-group">
             <%= category.label "Category" %>
             <%= category.text_field :name, class: 'form-control' %>
@@ -14,11 +28,11 @@
         </th></tr></thead>
         <% end %>
         <tbody>
-          <% counter = 1 %>
-          <%= game.column.fields_for :clues do |clue| %>
+          <% clue_counter = 1 %>
+          <%= column.fields_for :clues do |clue| %>
           <tr><td>
             <div class="form-group">
-              <%= f.hidden_field :position, :value => counter %>
+              <%= clue.hidden_field :position, :value => clue_counter %>
               <%= clue.label :clue %>
               <%= clue.text_area :clue, class: 'form-control'%>
             </div>
@@ -26,14 +40,14 @@
               <%= clue.label :response %>
               <%= clue.text_field :response, class: 'form-control' %>
             </div>
-            <div class="form-group">
-              <%= clue.label :position %>
-              <%= clue.text_field :position, class: 'form-control' %>
-            </div>
           </td></tr>
-          <% counter += 1 %>
+          <% clue_counter += 1 %>
           <% end %>
+        </tbody></table>
+        <% column_counter += 1 %>
       <% end %>
     </div>
+    <% board_counter += 1 %>
   <% end %>
+  <%= game.submit "Create game", class: "btn btn-primary" %>
 <% end %>
