--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <body>
   <div class="container main">
     <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
   </div>
+  <footer>
+    <%= debug(params) if Rails.env.development? %>
+  </footer>
   </body>
 </html>
