--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if @clue.errors.any? %>
+<% if @game.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@clue.errors.count, "error") %>
+      The form contains <%= pluralize(@game.errors.count, "error") %>
     </div>
     <ul>
-      <% @clue.errors.full_messages.each do |msg| %>
+      <% @game.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </ul>
