Working on adding final

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,6 +10,13 @@
   margin-top: 20px;
 }
 
+.edit-board {
+  display: block;
+}
+
+.edit-column {
+  display: inline;
+}
 .column {
   margin: 0px;
   padding: 0px;
