--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -14,13 +14,13 @@
   </div>
   <% board_counter = 1 %>
   <%= game.fields_for :boards do |board| %>
-    <div class="board well">
+    <div class="edit-board well">
       <%= board.hidden_field :round, :value => board_counter %>
       <% column_counter = 1 %>
       <%= board.fields_for :columns do |column| %>
         <%= column.hidden_field :position, :value => column_counter %>
         <%= column.fields_for :category do |category| %>
-        <table class="column"><thead><tr><th>
+        <table class="edit-column"><thead><tr><th>
           <div class="form-group">
             <%= category.label "Category" %>
             <%= category.text_field :name, class: 'form-control' %>
@@ -49,5 +49,18 @@
     </div>
     <% board_counter += 1 %>
   <% end %>
+  <div class="form-group">
+    <%= game.fields_for :final do |final| %>
+      <%= final.fields_for :category do |category| %>
+        <%= category.label :category %>
+        <%= category.text_field :category, class: 'form-control' %>
+      <% end %>
+      <%= final.hidden_field :position, :value => -1 %>
+      <%= final.label :clue %>
+      <%= final.text_area :clue, class: 'form-control' %>
+      <%= final.label :response %>
+      <%= final.text_field :resonse, class: 'response' %>
+    <% end %>
+  </div>
   <%= game.submit "Create game", class: "btn btn-primary" %>
 <% end %>
