--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,11 +5,16 @@
   margin-top: 20px;
 }
 
-.board {
-  background-color: black;
-  margin-top: 20px;
+.board{
+  border: 3px solid black;
+  display: block;
+  border-collapse: collapse;
 }
 
+.seperator {
+  display: block;
+  height: 20px;
+}
 .edit-board {
   display: block;
 }
@@ -17,23 +22,16 @@
 .edit-column {
   display: inline;
 }
-.column {
-  margin: 0px;
-  padding: 0px;
-}
 
 .box {
   font-size: 18pt;
   color: white;
   background-color: #060CE9;
-  border-radius: 2px;
-  margin: 10px;
   padding: 10px;
+  width: 220px;
+  height: 150px;
   text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background-image: image-url("box-bg.jpg");
+  border: 3px solid black;
 }
 
 .category {
