--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,12 +1,17 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+  margin-top: 20px;
+}
 .debug_dump {
   margin-top: 20px;
 }
 
 .board{
   border: 3px solid black;
+  table-layout: fixed;
+  //width: 1320px;
   display: block;
   border-collapse: collapse;
 }
@@ -24,11 +29,12 @@
 }
 
 .box {
-  font-size: 18pt;
   color: white;
   background-color: #060CE9;
-  padding: 10px;
+  padding: 2px;
   width: 220px;
+  max-width: 220px;
+  overflow: hidden;
   height: 150px;
   text-align: center;
   border: 3px solid black;
@@ -41,8 +47,8 @@
 }
 .clue {
   font-family: serif;
-  font-size: 16pt;
-  text-transform: uppercase;
+  font-size: 14pt;
+  //text-transform: uppercase;
 }
 
 .text {
@@ -58,4 +64,8 @@
 
 .clear-both {
   clear:both;
+}
+
+.hidden {
+  display: none;
 }
