--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -40,6 +40,10 @@
               <%= clue.label :response %>
               <%= clue.text_field :response, class: 'form-control' %>
             </div>
+            <div class="form-group">
+              <%= clue.check_box :is_dd %>
+              <%= clue.label "Daily Double" %>
+            </div>
           </td></tr>
           <% clue_counter += 1 %>
           <% end %>
@@ -48,6 +52,24 @@
       <% end %>
     </div>
     <% board_counter += 1 %>
+  <% end %>
+  <h2>Final</h2>
+  <%= game.fields_for :final do |final| %>
+    <%= final.fields_for :category do |category| %>
+      <div class="form-group">
+        <%= category.label "Category" %>
+        <%= category.text_field :name %>
+      </div>
+    <% end %>
+    <div class="form-group">
+      <%= final.hidden_field :is_fj, :value => true %>
+      <%= final.label :clue %>
+      <%= final.text_area :clue, class: 'form-control'%>
+    </div>
+    <div class="form-group">
+      <%= final.label :response %>
+      <%= final.text_field :response, class: 'form-control' %>
+    </div>
   <% end %>
   <%= game.submit "Create game", class: "btn btn-primary" %>
 <% end %>
