Add support for image attachments

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,3 +81,15 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.fa-picture-o {
+  margin-right: 4px;
+}
+
+.image-link {
+  color: white;
+  vertical-align: bottom;
+}
+div.photo {
+
+}
