--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -43,6 +43,13 @@
             <div class="form-group">
               <%= clue.check_box :is_dd %>
               <%= clue.label "Daily Double" %>
+              <a href="#" class="link-attachment">
+                <i class="fa fa-picture-o pull-right" aria-hidden="true"></i>
+              </a>
+            </div>
+            <div class="form-group attachment hidden">
+              <%= clue.label :attachment %>
+              <%= clue.file_field :attachment %>
             </div>
           </td></tr>
           <% clue_counter += 1 %>
