--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,6 +16,11 @@ body {
   border-collapse: collapse;
   border-radius: 4px;
 }
+.form-container {
+  width: 1420px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .seperator {
   display: block;
