--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,82 +1,2 @@
 <h1>Create a game</h1>
-
-<%= form_for(@game) do |game| %>
-  <%= render 'shared/error_messages' %>
-  <div class="form-group">
-    <%= game.label :title %>
-    <%= game.text_field :title, class: 'form-control' %>
-    <%= game.label :season %>
-    <%= game.number_field :season, class: 'form-control'%>
-    <%= game.label :episode %>
-    <%= game.number_field :episode, class: 'form-control'%>
-    <%= game.label :air_date %>
-    <%= game.date_field :air_date, class: 'form-control' %>
-  </div>
-  <% board_counter = 1 %>
-  <%= game.fields_for :boards do |board| %>
-    <div class="edit-board well">
-      <%= board.hidden_field :round, :value => board_counter %>
-      <% column_counter = 1 %>
-      <%= board.fields_for :columns do |column| %>
-        <%= column.hidden_field :position, :value => column_counter %>
-        <%= column.fields_for :category do |category| %>
-        <table class="edit-column"><thead><tr><th>
-          <div class="form-group">
-            <%= category.label "Category" %>
-            <%= category.text_field :name, class: 'form-control' %>
-          </div>
-        </th></tr></thead>
-        <% end %>
-        <tbody>
-          <% clue_counter = 1 %>
-          <%= column.fields_for :clues do |clue| %>
-          <tr><td>
-            <div class="form-group">
-              <%= clue.hidden_field :position, :value => clue_counter %>
-              <%= clue.label :clue %>
-              <%= clue.text_area :clue, class: 'form-control'%>
-            </div>
-            <div class="form-group">
-              <%= clue.label :response %>
-              <%= clue.text_field :response, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= clue.check_box :is_dd %>
-              <%= clue.label "Daily Double" %>
-              <a href="#" class="link-attachment">
-                <i class="fa fa-picture-o pull-right" aria-hidden="true"></i>
-              </a>
-            </div>
-            <div class="form-group attachment hidden">
-              <%= clue.label :attachment %>
-              <%= clue.file_field :attachment %>
-            </div>
-          </td></tr>
-          <% clue_counter += 1 %>
-          <% end %>
-        </tbody></table>
-        <% column_counter += 1 %>
-      <% end %>
-    </div>
-    <% board_counter += 1 %>
-  <% end %>
-  <h2>Final</h2>
-  <%= game.fields_for :final do |final| %>
-    <%= final.fields_for :category do |category| %>
-      <div class="form-group">
-        <%= category.label "Category" %>
-        <%= category.text_field :name %>
-      </div>
-    <% end %>
-    <div class="form-group">
-      <%= final.hidden_field :is_fj, :value => true %>
-      <%= final.label :clue %>
-      <%= final.text_area :clue, class: 'form-control'%>
-    </div>
-    <div class="form-group">
-      <%= final.label :response %>
-      <%= final.text_field :response, class: 'form-control' %>
-    </div>
-  <% end %>
-  <%= game.submit "Create game", class: "btn btn-primary" %>
-<% end %>
+<%= render partial: 'form' %>
