--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -54,8 +54,8 @@
               </a>
             </div>
             <div class="form-group attachment hidden">
-              <%= clue.label :attachment %>
-              <%= clue.file_field :attachment %>
+              <%= clue.label :image_url %>
+              <%= clue.text_field :image_url %>
             </div>
           </td></tr>
           <% clue_counter += 1 %>
@@ -84,8 +84,8 @@
       <%= final.text_field :response, class: 'form-control' %>
     </div>
     <div class="form-group attachment">
-      <%= final.label :attachment %>
-      <%= final.file_field :attachment %>
+      <%= final.label :image_url %>
+      <%= final.text_field :image_url %>
     </div>
   <% end %>
   <%= game.submit "Save", class: "btn btn-primary" %>
