--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -26,7 +26,7 @@
               <%= clue.clue %>
               <% if !clue.attachment.blank? %>
                 <a href="#/" class="image-link" data-link="
-                  <%= clue.attachment.url %>">
+                  <%= clue.image_url %>">
                   <i class="fa fa-picture-o" aria-hidden="true"></i>
                 </a>
               <% end %>
