--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,6 +3,7 @@
 
 body {
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 .debug_dump {
   margin-top: 20px;
@@ -37,7 +38,7 @@ body {
 .box {
   color: white;
   background-color: #060CE9;
-  padding: 2px;
+  padding: 4px;
   width: 220px;
   height: 150px;
   max-width: 220px;
