--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,7 +24,7 @@
           <td class="clue box">
             <span class="clue">
               <%= clue.clue %>
-              <% if !clue.attachment.blank? %>
+              <% if !clue.image_url.blank? %>
                 <a href="#/" class="image-link" data-link="
                   <%= clue.image_url %>">
                   <i class="fa fa-picture-o" aria-hidden="true"></i>
