--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -57,8 +57,12 @@ body {
   font-size: 14pt;
 }
 
+.response-results {
+  color: #5cb85c;
+}
+
 .response {
-  color: yellow;
+  color: rgb(101, 255, 0);
 }
 
 .text {
@@ -80,8 +84,8 @@ body {
   display: none;
 }
 
-.games-index {
-  width: 600px;
+.fixed-width {
+  width: 800px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -93,4 +97,19 @@ body {
 .image-link {
   color: white;
   vertical-align: bottom;
+}
+
+.value {
+  font-size: 14px;
+  font-style: italic;
+}
+
+.search-results {
+  margin-top: 20px;
+}
+
+.search-sm {
+  width: 300px;
+  max-width: 300px;
+  display: inline;
 }
