Search includes categories, all clues now have categories

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,16 +1,6 @@
 
 <div class="container fixed-width">
-    <section class="search-form">
-      <%= form_for :clues, url: clues_path, method: :get do |f| %>
-        <div class="input-group">
-          <%= label_tag :keywords, nil, class: "sr-only" %>
-          <%= text_field_tag :keywords, nil, class: "form-control search-sm pull-right" %>
-          <span class="input-group-btn">
-            <%= submit_tag "Search", class: "btn btn-primary pull-right" %>
-          </span>
-        </div>
-      <% end %>
-    </section>
+  <%= render partial: 'search' %>
   <h1>Games</h1>
   <div class="list-group">
     <% @games.each do |game| %>
