--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,14 +1,18 @@
 
 <div class="container fixed-width">
   <%= render partial: 'search' %>
-  <h1>Games</h1>
-  <div class="list-group">
-    <% @games.each do |game| %>
-      <%= link_to game_path(game),
-        class: 'list-group-item list-group-item-action' do%>
-        S<%= game.season %>E<%=game.episode%> <%= game.title %>
-        <span class="pull-right"><%= game.air_date %></span>
+  <span class="h1">Games
+    <%= link_to "New", new_game_path, class: "h4 link" %>
+  </span>
+  <div class="games-list">
+    <div class="list-group">
+      <% @games.each do |game| %>
+        <%= link_to game_path(game),
+          class: 'list-group-item list-group-item-action' do%>
+          S<%= game.season %>E<%=game.episode%> <%= game.title %>
+          <span class="pull-right"><%= game.air_date %></span>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
