--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -44,6 +44,7 @@ body {
   max-width: 220px;
   overflow: hidden;
   text-align: center;
+  vertical-align: top;
   border: 3px solid black;
 }
 
@@ -57,13 +58,31 @@ body {
   font-family: sans-serif;
   font-weight: bold;
   font-size: 16pt;
+  vertical-align: middle;
+}
+.clue-table {
+  height: 100%;
+  width: 100%;
 }
 .clue.box {
   font-family: serif;
   font-size: 14pt;
   height: 150px;
 }
-
+.clue-header {
+  font-family: sans-serif;
+  font-size: 12pt;
+  text-align: center;
+  color: #e3e800;
+}
+.clue-body {
+  vertical-align: middle;
+}
+.clue-table {
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+}
 .response-results {
   color: #5cb85c;
 }
