Edit/create should work with all recent DB changes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -130,6 +130,13 @@ body {
   margin-right: auto;
 }
 
+.correct {
+  color: #65ff00;
+}
+
+.incorrect {
+  color: red;
+}
 .fa-picture-o {
   margin-right: 4px;
 }
