--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -1,2 +1,5 @@
+<% content_for(:body_attributes) do %>
+  data-no-turbolink="true"
+<% end %>
 <h1>Create a episode</h1>
 <%= render partial: 'form' %>
