--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -26,12 +26,27 @@
                 <span class="clue">
                   <%= clue.clue %>
                   <% if !clue.image_url.blank? %>
-                    <a href="<%= clue.image_url %>" data-toggle="lightbox">
+                    <a href="<%= clue.image_url %>" data-toggle="lightbox"
+                      data-title="<%= clue.category_name %>"
+                      data-footer="<%= clue.clue %>" class="image-link">
                       <i class="fa fa-picture-o" aria-hidden="true"></i>
                     </a>
                   <% end %>
                 </span>
-                <span class="response hidden"><%= clue.correct_response %></span>
+                <span class="response hidden">
+                  <% triple_stumper = true %>
+                  <% clue.responses.each do |response| %>
+                    <% triple_stumper = false if response.is_correct %>
+                    <% style = response.is_correct ? 'correct' : 'incorrect' %>
+                    <h4 class="<%= style %>">
+                      <%= response.contestant.name + ': ' + response.response %>
+                    </h4>
+                  <% end %>
+                  <% if triple_stumper %>
+                    <h4 class="incorrect">Triple Stumper</h4>
+                  <% end %>
+                  <h4><%= clue.correct_response %></h4>
+                </span>
               </td></tr></tbody>
             </table>
           </td>
@@ -50,14 +65,11 @@
           <span class="clue">
             <%= @episode.final.clue %>
             <% if !@episode.final.image_url.blank? %>
-                <button type="button" class="btn btn-info" data-toggle="modal"
-                        data-target="#image">
-                  <i class="fa fa-picture-o" aria-hidden="true"></i>
-                </button>
-              <!-- <a href="#/" class="btn btn-lg btn-success" data-toggle="modal"
-              data-link="<%#= clue.image_url %>" data-target="#image">
+              <a href="<%= final.image_url %>" data-toggle="lightbox"
+                data-title="<%= final.category_name %>"
+                data-footer="<%= final.clue %>" class="image-link">
                 <i class="fa fa-picture-o" aria-hidden="true"></i>
-              </a> -->
+              </a>
             <% end %>
           </span>
           <span class="response hidden"><%= @episode.final.correct_response %></span>
