Update episode view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -151,6 +151,11 @@ body {
   font-style: italic;
 }
 
+.pick-order {
+  color: white;
+  font-size: 80%;
+}
+
 .search-results {
   margin-top: 20px;
 }
