Flesh out users, episode ownership

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,6 +156,11 @@ body {
   font-size: 80%;
 }
 
+.private-item {
+  font-style: italic;
+  background-color: #ffebee;
+}
+
 .search-results {
   margin-top: 20px;
 }
